# serial

./: CMakeLists.txt  README.md
examples/: read_counter.cpp
include/: SerialComm.hpp
src/: SerialComm.cpp
